[package]
name = "stepstone"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
common-meta = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
common-macro = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
common-error = { git = "https://github.com/GreptimeTeam/greptimedb.git", branch = "main" }
tokio = { version = "1.47", features = ["full"] }
snafu = "0.8"
itertools = "0.14.0"